# dune-analysis

./: .env.example  .gitignore  README.md  pyproject.toml  skills-lock.json
.agents/skills/dune/references/: query-execution.md
.agents/skills/sim/: SKILL.md
.agents/skills/sim/references/: evm-activity.md  evm-balances.md  evm-collectibles.md  evm-defi.md  evm-tokens.md  evm-transactions.md  install-and-recovery.md  svm-commands.md
docs/: competitor_quote_api_research.md  competitor_route_topology.md  pair_protocol_coverage.md  tycho_pricing_api_dependency.md
notebooks/: 01_dune_data_quality.ipynb  02_liquidity_scoring.ipynb  03_indexing_strategy.ipynb  04_hosted_tycho_pair_coverage.ipynb
queries/: aggregator_orderflow_breakdown.sql  aggregator_route_topology_by_size.sql  all_venue_coverage.sql  dashboard_summary.sql  indexing_strategy_inputs.sql  non_tycho_venue_breakdown.sql  protocol_version_breakdown.sql  protocol_volume_7d_30d.sql  token_pair_coverage.sql  top_pools_by_pair_protocol.sql
reports/: README.md
scripts/: compare-no-key-quotes.sh
src/tycho_liquidity_analysis/: __init__.py  cache.py  cli.py  config.py  dune.py  dune_cli.py  lifi_topology.py  reports.py  scoring.py  tycho_logs.py  universe.py
tests/: test_dune_cli.py  test_scoring.py  test_tycho_logs.py
