[project]
name = "tycho-liquidity-analysis"
version = "0.1.0"
description = "Dune + Polars analysis for Tycho liquidity coverage and indexing strategy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dune-client>=1.7.0",
    "ipykernel>=6.29.0",
    "jupyter>=1.1.0",
    "nbformat>=5.10.0",
    "plotly>=6.1.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pydantic-settings>=2.9.0",
    "python-dotenv>=1.1.0",
    "typer>=0.16.0",
    "ruamel.yaml>=0.18.0",
]

[project.scripts]
tycho-liquidity = "tycho_liquidity_analysis.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
